--- a/react/domain-starter/src/styles/App.css
+++ b/react/domain-starter/src/styles/App.css
@@ -1,6 +1,12 @@
+body {
+  background-image: url('../assets/gradient_bg.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .App {
   height: 100vh;
-  background-color: #0d1116;
   text-align: center;
   color: white;
 }
@@ -11,7 +17,6 @@ p {
 
 .container {
   height: 100%;
-  background-color: #181818;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -33,11 +38,17 @@ header{
   font-size: 35px;
   font-weight: bold;
   color: white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 
 .subtitle {
   font-size: 25px;
   color: white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 
 .left{
@@ -62,7 +73,7 @@ header{
 }
 
 .content-container {
-  background-color: #a200d6;
+  background-color: #cf556c;
 }
 
 .cta-button {
@@ -82,11 +93,17 @@ header{
   display: flex;
   flex-direction: column;
   margin: auto;
-  max-width: 550px;
+  width: 600px;
+  font-size: 20px;
+  max-width: 100%;
 }
 
 .connect-wallet-container img {
   padding-bottom: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
 }
 
 .connect-wallet-button {
@@ -104,7 +121,7 @@ header{
 }
 
 .mint-button {
-  background: -webkit-linear-gradient(left, #a200d6, #ff6fdf);
+  background: -webkit-linear-gradient(left, #b12a5b, #ff8177);
   font-size: 18px;
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
@@ -139,7 +156,6 @@ header{
   width: 12px;
 }
 
-
 .footer-container {
   display: flex;
   justify-content: center;
@@ -147,15 +163,17 @@ header{
   padding-bottom: 30px;
 }
 
-.twitter-logo {
-  width: 35px;
-  height: 35px;
+.github-logo {
+  width: 25px;
+  height: 25px;
+  padding-right: 5px;
 }
 
 .footer-text {
   color: white;
   font-size: 16px;
   font-weight: bold;
+  padding-right: 10px;
 }
 
 .form-container{
@@ -173,7 +191,7 @@ input{
   color: white;
   letter-spacing: 1px;
   font-size: 26px;
-  width: 400px;
+  width: 500px;
   margin-bottom: 10px;
   padding: 10px 20px;
   text-align: center;
